<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.vivienlk.wardrobeinventory.UI.FilterItemsFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_by_item"
        android:id="@+id/itemFilter"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/itemFilterSpinner"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/itemFilter"
        android:layout_alignParentRight="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_by_color"
        android:id="@+id/colorFilter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/colorFilterSpinner"
        android:layout_below="@id/colorFilter"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_by_season"
        android:id="@+id/seasonFilter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="210dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seasonFilterSpinner"
        android:layout_below="@id/seasonFilter"
        android:layout_alignParentLeft="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:id="@+id/filterButton"
        android:layout_below="@+id/seasonFilterSpinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

</RelativeLayout>
